Updated to Java 11.